Fix other events page layout on mobile

--- a/src/pages/bath-pride-2024/other-events/index.module.scss
+++ b/src/pages/bath-pride-2024/other-events/index.module.scss
@@ -1,3 +1,4 @@
+@use '@theme/mixins.scss';
 @use '@theme/theme.scss';
 
 .page {
@@ -5,7 +6,10 @@
 
   .content {
     grid-row-gap: theme.$spacing-small;
-    grid-template-columns: 3fr 5fr 3fr;
+
+    @include mixins.desktop {
+      grid-template-columns: 3fr 5fr 4fr;
+    }
   }
 
   ul {
